--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   margin-top: 66px;
   font-family: 'Inter', Arial, sans-serif;
-  max-width: 880px;
+  width: 880px;
 }
 
 @media screen and (max-width: 917px) {
