--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,4 +1,7 @@
 .page {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
   font-family: 'Inter', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   background-color: #000000;
